# coding-analyzer

./: README.md
.cph/: .B_Delete_and_Concatenate.cpp_3c593924769850e2874eaa9b31f10d0e.prob
client/: package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.jsx
client/src/Pages/: CodeAnalyzePage.jsx  ExpressionEvaluationPage.jsx  HomePage.jsx
client/src/components/: Button.jsx  Compiler.jsx  Footer.jsx  Navbar.jsx  ResultCard.jsx
client/ubuntu@13.60.10.135/: index.html
client/ubuntu@13.60.10.135/assets/: index-BkYIzawv.css  index-CG0Ki4x7.js
cpp_engine/: CMakeLists.txt  main.cpp  server
cpp_engine/include/: detector.h  evaluator.h  notationValidator.h  validator.h
cpp_engine/include/cpp/: analyzer.h
cpp_engine/include/expression/: converter.h  detector.h  processor.h
cpp_engine/include/utils/: error.h  helpers.h
cpp_engine/src/: converter.cpp  evaluator.cpp  notationValidator.cpp  processor.cpp  validator.cpp
cpp_engine/src/cpp/: analyzer.cpp
cpp_engine/src/expression/: converter.cpp  detector.cpp  evaluator.cpp  notationValidator.cpp  processor.cpp  validator.cpp
cpp_engine/tests/: expression_test.cpp
server/: index.js  package-lock.json  package.json
server/controller/: home.js
server/routes/: home.js
